[package]
name = "discipline_daemon"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.42"
libc = "0.2.177"
libsqlite3-sys = "0.35.0"
rusqlite = "0.37.0"
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.48.0", features = ["full"] }
uuid = { version = "1.18.1", features = ["v4"] }
llhttp_rs = { path = "../dependencies/llhttp_rs/llhttp_rs" }
bincode = { version = "2.0.1", features = [ "serde" ] }
serde_json = "1.0.149"
syslog = "7.0.0"
